Fixed bug where GAP divs was not positioned correctly and did not move with canvas scroll. Some refactoring/removed old code.

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,7 @@ input[type="file"] {
   max-width: 600px;
   max-height: 600px;
   overflow: scroll;
+  position: relative;
 }
 
 .dropAreaDiv {
